Improve Admin UI (dropdowns, upload form, navigation and more)

--- a/admin/app/assets/stylesheets/spree/admin/application.scss
+++ b/admin/app/assets/stylesheets/spree/admin/application.scss
@@ -34,6 +34,8 @@
 @import url('https://esm.sh/animate.css@4.1.1/animate.min.css');
 @import url('https://esm.sh/@simonwep/pickr@1.8.2/dist/themes/classic.min.css');
 
+@import 'plugins/uppy_fixes';
+
 @import 'shared/base';
 @import 'shared/forms';
 
