--- a/admin/app/views/active_storage/_upload_form.html.erb
+++ b/admin/app/views/active_storage/_upload_form.html.erb
@@ -14,7 +14,7 @@
       data-active-storage-upload-field-name-value="<%= form.object_name %>[<%= field_name %>]"
       data-active-storage-upload-allowed-file-types-value="<%= Rails.application.config.active_storage.web_image_content_types %>"
       class="d-flex flex-column justify-content-center w-100 position-relative">
-    <div class="mb-3 rounded-lg overflow-hidden thumb-preview cursor-pointer border border-dashed bg-gray-25 hover-gray-50 p-2 d-flex align-items-center justify-content-center"
+    <div class="upload-area"
          data-action="click->active-storage-upload#open"
     >
       <% if form.object.send(field_name).attached? && form.object.send(field_name).variable? %>
@@ -34,7 +34,7 @@
         <img data-active-storage-upload-target="thumb" class="img-fluid rounded-lg" style="display: none" />
       <% end %>
 
-      <div class="d-flex flex-column justify-content-center align-items-center h-100 p-5 text-muted rounded-lg <%= css %>" data-active-storage-upload-target="placeholder" <% if form.object.send(field_name).attached? && form.object.send(field_name).variable? %>style="display: none !important"<% end %>>
+      <div class="d-flex flex-column justify-content-center align-items-center h-100 p-5 rounded-lg <%= css %>" data-active-storage-upload-target="placeholder" <% if form.object.send(field_name).attached? && form.object.send(field_name).variable? %>style="display: none !important"<% end %>>
         <%= icon('upload', class: 'mr-0 mb-3', style: 'font-size: 2rem;') %>
         <%= Spree.t('admin.upload_new_asset') %>
 
@@ -46,7 +46,7 @@
       </div>
     </div>
 
-    <div class="d-flex align-items-center pb-3" data-active-storage-upload-target="toolbar" <% unless form.object.send(field_name).attached? && form.object.send(field_name).variable? %>style="display: none !important"<% end %>>
+    <div class="d-flex align-items-center my-2" data-active-storage-upload-target="toolbar" <% unless form.object.send(field_name).attached? && form.object.send(field_name).variable? %>style="display: none !important"<% end %>>
       <button type="button" class="btn btn-light" data-action="active-storage-upload#open">
         <%= icon('upload') %>
         <%= Spree.t('actions.select_file') %>
