--- a/admin/app/views/spree/admin/shared/_sidebar.html.erb
+++ b/admin/app/views/spree/admin/shared/_sidebar.html.erb
@@ -7,7 +7,7 @@
   <% end %>
 
   <% unless settings_active? %>
-    <section class="position-sticky d-none d-lg-block w-100 z-index-1000 mt-auto py-2 bottom-0">
+    <section class="position-sticky d-none d-lg-block w-100 z-index-1000 mt-auto bottom-0">
       <%= render 'spree/admin/shared/sidebar/enterprise_edition_notice' %>
       <%= render 'spree/admin/shared/user_dropdown' %>
     </section>
