--- a/admin/app/views/spree/admin/tax_categories/_form.html.erb
+++ b/admin/app/views/spree/admin/tax_categories/_form.html.erb
@@ -3,7 +3,7 @@
 
     <div class="form-group">
       <%= f.label :name, Spree.t(:name) %>
-      <%= f.text_field :name, class: 'form-control' %>
+      <%= f.text_field :name, class: 'form-control', autofocus: f.object.new_record?, required: true %>
       <%= f.error_message_on :name %>
     </div>
 
