--- a/admin/app/views/spree/admin/users/index.html.erb
+++ b/admin/app/views/spree/admin/users/index.html.erb
@@ -29,7 +29,7 @@
                 <a
                   href="<%= spree.bulk_modal_admin_users_path(kind: :add_tags) %>"
                   data-turbo-frame="bulk_modal"
-                  class="btn btn-primary mr-2"
+                  class="btn btn-light mr-2"
                   data-action="click->bulk-operation#setBulkAction"
                   data-url="<%= spree.bulk_add_tags_admin_users_path %>"
                 >
