--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -71,23 +71,17 @@ $thumbnail-border-color: $gray-100 !default;
 $hr-border-color: $border-color !default;
 $table-border-color: $gray-50 !default;
 $card-border-color: $border-color !default;
+$input-btn-focus-width: 0.15rem !default;
 
 $card-spacer-y:                     .75rem !default;
 $card-spacer-x:                     1rem !default;
 
-$custom-control-indicator-checked-bg:           $primary !default;
-$custom-control-indicator-checked-disabled-bg:  rgba($primary, .5) !default;
-$custom-control-indicator-checked-border-color: $primary !default;
-
-$input-focus-border-color:              $primary !default;
-$input-btn-focus-color:        $primary !default;
-$input-btn-focus-box-shadow: 0 0 0 1px $primary !default;
+$component-active-bg:         $blue !default;
 
 $input-placeholder-color: $gray-500;
 $input-padding-y:         .5rem !default;
 $input-disabled-bg: $gray-50 !default;
 $custom-select-disabled-bg: $gray-50 !default;
-$custom-select-focus-width: 1px !default;
 
 $text-muted: $gray-400 !default;
 
@@ -95,7 +89,6 @@ $link-color: $primary !default;
 $link-hover-decoration:                   underline !default;
 
 $btn-active-box-shadow:       inset 0 3px 5px rgba($black, .025) !default;
-$btn-font-weight: 500 !default;
 $btn-disabled-opacity: 0.3 !default;
 
 $nav-link-padding-y:                .5rem !default;
@@ -108,6 +101,12 @@ $box-shadow-lg: rgba(0, 5, 13, 0.5) 0px 4px 8px 2px;
 $tooltip-border-radius: $border-radius-sm !default;
 $tooltip-opacity: 1 !default;
 $tooltip-margin:                    0.25rem 0 !default;
+$tooltip-padding-y:                 .5rem !default;
+$tooltip-padding-x:                 .75rem !default;
+$tooltip-bg: $white !default;
+$tooltip-color: $body-color !default;
+$tooltip-arrow-color: transparent !default;
+$tooltip-max-width: 210px !default;
 
 $transition-base:             all .1s ease-in-out !default;
 $transition-fade:             opacity .15s linear !default;
@@ -144,7 +143,8 @@ $display4-weight:             400 !default;
 
 $dropdown-border-width:  0px !default;
 $dropdown-border-radius: $border-radius-lg !default;
-$dropdown-link-hover-bg: $gray-50 !default;
+$dropdown-link-hover-bg: $blue !default;
+$dropdown-link-hover-color: $white !default;
 $dropdown-box-shadow:    rgba(209, 217, 224, 0.8) 0px 0px 0px 1px, rgba(37, 41, 46, 0.04) 0px 6px 12px -3px, rgba(37, 41, 46, 0.12) 0px 6px 18px 0px !default;
 $dropdown-padding-x:    0.25rem !default;
 $dropdown-padding-y:    0.25rem !default;
@@ -171,10 +171,6 @@ $alert-padding-y:                   0.5rem !default;
 $alert-padding-x:                   1rem !default;
 $alert-border-radius: $border-radius-lg;
 
-.border.border-2 {
-  border-width: 2px !important;
-}
-
 $embed-responsive-aspect-ratios: (
     (21 9),
     (16 9),
@@ -182,7 +178,6 @@ $embed-responsive-aspect-ratios: (
     (4 3),
     (1 1)
 ) !default;
-
 
 // tables
 $table-cell-padding: .75rem .50rem !default;
