--- a/admin/app/assets/stylesheets/spree/admin/shared/_forms.scss
+++ b/admin/app/assets/stylesheets/spree/admin/shared/_forms.scss
@@ -64,11 +64,13 @@ input[type="file"] {
   background-repeat: no-repeat !important;
   border-radius: $input-border-radius;
   padding-right: 2.5rem;
-
-  &:hover:not(:focus) {
-    border: 1px solid theme-color('primary') !important;
+}
+.custom-select, .form-control, .ts-control {
+  &:hover:not(:focus):not(:active):not(.active):not(:focus-visible):not(:focus-within) {
+    border: 1px solid $gray-200;
   }
 }
+
 .ts-control>input {
   min-width: auto !important;
 }
@@ -158,15 +160,6 @@ input[type="file"] {
 
   &:hover, &:active, &:focus {
     @extend .border-black;
-  }
-}
-
-.form-control-dark {
-  @extend .text-white;
-  @extend .border-gray-700;
-
-  &:hover, &:active, &:focus {
-    @extend .border-white;
   }
 }
 
