--- a/admin/app/views/spree/admin/shared/_content_header.html.erb
+++ b/admin/app/views/spree/admin/shared/_content_header.html.erb
@@ -1,4 +1,4 @@
-<% record = @customer_return || @order || @product || @vendor || @user || @taxon || @category || @parent || @object || @marketplace %>
+<% record = @customer_return || @order || @product || @vendor || @user || @taxon || @object %>
 <% record = nil if @user&.is_a?(Spree.admin_user_class) %>
 
 <% show_record_subtitle = record && record.persisted? && record.has_attribute?(:updated_at) %>
@@ -7,7 +7,7 @@
 <% end if show_record_subtitle && !content_for(:page_subtitle) %>
 
 <% if content_for?(:page_title) %>
-  <header id="page-header">
+  <header id="page-header" class="container">
     <h3 class="page-header-title mb-0 d-flex align-items-center gap-3">
       <%= yield :page_title %>
     </h3>
@@ -22,12 +22,15 @@
       <% end %>
 
       <%= yield :page_actions if content_for?(:page_actions) %>
+
+      <% if action_name == 'edit' && @object %>
+        <%= turbo_save_button_tag Spree.t('actions.update'), class: 'btn btn-primary', form: "edit_#{@object.class.name.demodulize.underscore}_#{@object.id}" %>
+      <% end %>
+
       <% if show_record_subtitle || content_for(:page_actions_dropdown) %>
-        <div class="dropdown ml-2 h-100" id="page_actions_dropdown">
-          <%= link_to '#', class: 'btn btn-light bg-transparent h-100 dropdown-toggle btn-sm', data: { toggle: 'dropdown' }, id: 'more-actions-link' do %>
-            <span class="d-none d-lg-inline mr-2">
-              <%= Spree.t(:more_actions) %>
-            </span>
+        <div class="dropdown h-100" id="page_actions_dropdown">
+          <%= link_to '#', class: 'btn btn-light bg-transparent h-100 p-2', data: { toggle: 'dropdown' }, id: 'more-actions-link' do %>
+            <%= icon 'dots', class: 'mr-0' %>
           <% end %>
           <div class="dropdown-menu dropdown-menu-right">
             <%= yield :page_actions_dropdown if content_for(:page_actions_dropdown) %>
@@ -63,12 +66,16 @@
 <% end %>
 
 <% if content_for?(:page_tabs) %>
-  <ul class="nav nav-pills flex-nowrap overflow-auto w-100 mb-3">
-    <%= yield :page_tabs %>
-  </ul>
+  <div class="container">
+    <ul class="nav nav-pills flex-nowrap overflow-auto w-100 mb-3">
+      <%= yield :page_tabs %>
+    </ul>
+  </div>
 <% end %>
 <% if content_for(:page_alerts) %>
-  <div class="page-alerts">
-    <%= yield(:page_alerts) %>
+  <div class="container">
+    <div class="page-alerts">
+      <%= yield(:page_alerts) %>
+    </div>
   </div>
 <% end %>
