--- a/admin/app/views/spree/admin/stores/form/_emails.html.erb
+++ b/admin/app/views/spree/admin/stores/form/_emails.html.erb
@@ -11,7 +11,7 @@
       <div class="card-body">
         <p class="text-muted">This logo is included in all email notifications such as order confirmation</p>
         <%= render 'active_storage/upload_form', form: f, field_name: :mailer_logo, width: 204, height: 104 %>
-        <p class="text-muted mb-0">
+        <p class="form-text text-muted mb-0 mt-2">
           We recommend images with a transparent background.
           <br />
           Only JPEG and PNG formats are supported.
