--- a/admin/app/views/spree/admin/tax_rates/_form.html.erb
+++ b/admin/app/views/spree/admin/tax_rates/_form.html.erb
@@ -10,7 +10,7 @@
       <div class="col-12 col-lg-6">
         <div class="form-group">
           <%= f.label :name, Spree.t(:name) %>
-          <%= f.text_field :name, class: 'form-control', required: true %>
+          <%= f.text_field :name, class: 'form-control', required: true, autofocus: f.object.new_record? %>
           <%= f.error_message_on :name %>
         </div>
         <div class="form-group">
