--- a/admin/app/views/spree/admin/page_builder/_header.html.erb
+++ b/admin/app/views/spree/admin/page_builder/_header.html.erb
@@ -1,10 +1,10 @@
-<header id="page-builder-header" class="fixed-top p-0 bg-light border-bottom" style="z-index: 1031">
-  <nav class="navbar navbar-expand-lg w-100 p-0">
-    <%= link_to spree.admin_themes_path, class: 'btn hover-gray rounded-0 border-left-0 border-top-0 border-bottom-0 d-none d-lg-flex px-3 border-right', title: 'Go back to dashboard' do %>
-      <%= icon('x', class: 'mr-0 text-muted font-size-lg') %>
+<header id="page-builder-header" class="fixed-top">
+  <nav class="navbar navbar-expand-lg">
+    <%= link_to spree.admin_themes_path, class: 'btn btn-light with-tip px-2', title: 'Go back to dashboard' do %>
+      <%= icon('x', class: 'mr-0') %>
     <% end %>
     <div class="px-3">
-      <span class="text-muted mr-1">Theme:</span>
+      <span class="text-muted mr-1"><%= Spree.t(:theme) %>:</span>
       <strong class="mr-1"><%= @theme.name %></strong>
       &nbsp;
       <% if @theme.default? %>
@@ -18,14 +18,14 @@
     </div>
     <%= render 'spree/admin/page_builder/pages_dropdown' %>
 
-    <ul class="nav nav-pills p-0 m-0" role="tablist">
+    <ul class="nav nav-pills" role="tablist">
       <% if @page.custom? %>
-        <li class="nav-item h-100 border-right" role="presentation" data-toggle="modal" data-target="#modal">
-          <%= link_to_with_icon 'settings', Spree.t(:page_settings), spree.edit_admin_page_path(@page.id), class: 'h-100 btn hover-gray with-tip rounded-0 border-0 shadow-none px-3', data: { turbo_frame: 'dialog_modal' } %>
+        <li class="nav-item" role="presentation" data-toggle="modal" data-target="#modal">
+          <%= link_to_with_icon 'settings', Spree.t(:page_settings), spree.edit_admin_page_path(@page.id), class: 'btn btn-light', data: { turbo_frame: 'dialog_modal' } %>
         </li>
       <% else %>
-        <li class="nav-item h-100 border-right" role="presentation">
-          <button class="h-100 btn hover-gray active with-tip rounded-0 border-0 shadow-none px-3"
+        <li class="nav-item" role="presentation">
+          <button class="nav-link active"
                         title="Page sections"
                         data-toggle="tab"
                         data-target="#sections"
@@ -38,8 +38,8 @@
             <%= icon 'section', class: 'mr-0' %>
           </button>
         </li>
-        <li class="nav-item h-100 border-right" role="presentation">
-          <button class="h-100 btn hover-gray with-tip rounded-0 border-0 shadow-none px-3"
+        <li class="nav-item" role="presentation">
+          <button class="nav-link"
                   title="Theme"
                   data-toggle="tab"
                   data-target="#colors"
@@ -52,8 +52,8 @@
             <%= icon 'palette', class: 'mr-0' %>
           </button>
         </li>
-        <li class="nav-item h-100 border-right" role="presentation">
-          <button class="h-100 btn hover-gray with-tip rounded-0 border-0 shadow-none px-3"
+        <li class="nav-item" role="presentation">
+          <button class="nav-link"
                 title="Fonts"
                 type="button"
                 data-toggle="tab"
@@ -69,33 +69,31 @@
         </li>
       <% end %>
     </ul>
-    <button class="btn with-tip ml-auto border-left px-3 text-black" type="button"
-            title="Mobile"
-            data-trigger="hover"
-            data-action="click->page-builder#setResponsiveBreakpoint"
-            data-page-builder-target="mobileButton"
-            data-page-builder-breakpoint-param="mobile">
-      <%= icon 'device-mobile', class: 'mr-0' %>
-    </button>
-    <button class="btn active with-tip border-right px-3 text-black" type="button" title="Desktop"
-            data-action="click->page-builder#setResponsiveBreakpoint"
-            data-page-builder-breakpoint-param="desktop"
-            data-trigger="hover"
-            data-page-builder-target="desktopButton">
-      <%= icon 'device-laptop', class: 'mr-0' %>
-    </button>
 
-    <%= link_to_with_icon 'eye.svg', Spree.t(:preview), @page.preview_url(@theme_preview, @page_preview), class: 'btn hover-gray d-none d-lg-flex align-items-center border-left', target: '_blank' %>
+    <ul class="nav nav-pills ml-auto" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link with-tip" type="button"
+                title="Mobile"
+                data-trigger="hover"
+                data-action="click->page-builder#setResponsiveBreakpoint"
+                data-page-builder-target="mobileButton"
+                data-page-builder-breakpoint-param="mobile">
+          <%= icon 'device-mobile', class: 'mr-0' %>
+        </button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active with-tip" type="button" 
+                title="Desktop"
+                data-action="click->page-builder#setResponsiveBreakpoint"
+                data-page-builder-breakpoint-param="desktop"
+                data-trigger="hover"
+                data-page-builder-target="desktopButton">
+          <%= icon 'device-laptop', class: 'mr-0' %>
+        </button>
+      </li>
+    </ul>
 
-    <%= button_tag class: 'btn btn-primary px-3 d-flex justify-content-center shadow-none' do %>
-      <span class="show-when-enabled">
-        <%= @theme.default? ? Spree.t('actions.publish') : Spree.t('actions.save') %>
-      </span>
-      <span class="show-when-disabled">
-        <div class="spinner-border" role="status" style="width: 18px; height: 18px">
-          <span class="sr-only"><%= Spree.t(:loading) %>...</span>
-        </div>
-      </span>
-    <% end %>
+    <%= link_to_with_icon 'eye', Spree.t(:preview), @page.preview_url(@theme_preview, @page_preview), class: 'btn btn-light ml-auto', target: '_blank' %>
+    <%= turbo_save_button_tag(@theme.default? ? Spree.t('actions.publish') : Spree.t('actions.save')) %>
   </nav>
 </header>
