--- a/admin/app/views/spree/admin/page_builder/_pages_dropdown.html.erb
+++ b/admin/app/views/spree/admin/page_builder/_pages_dropdown.html.erb
@@ -4,7 +4,7 @@
   </div>
 <% else %>
   <div class="dropdown h-100" id="pages_dropdown">
-    <button class="btn hover-gray border-bottom-0 border-top-0 rounded-0 border-left border-right d-flex align-items-center justify-content-between h-100" type="button" data-toggle="dropdown" aria-expanded="false">
+    <button class="btn btn-light" type="button" data-toggle="dropdown" aria-expanded="false">
       <span class="d-flex align-items-center pr-5">
         <%= icon @page.icon_name, class: 'mr-2' %>
         <%= @page.display_name %>
