--- a/admin/app/views/spree/admin/page_builder/_sidebar_fonts.html.erb
+++ b/admin/app/views/spree/admin/page_builder/_sidebar_fonts.html.erb
@@ -1,15 +1,9 @@
-<h6 class="p-3 border-bottom sticky-top d-flex align-items-center text-uppercase bg-light">
-    <span
-     class='btn btn-sm btn-light shadow-none reounded-sm mr-3 text-center bg-transparent d-md-none back'
-     data-action="click->page-builder#hideSidebarMobile"
-  >
-   <%= icon 'chevron-left.svg', class: 'mr-0' %>
-  </span>
+<h6 class="sidebar-header">
   <%= Spree.t(:fonts) %>
 </h6>
 
 <%= form_for @theme_preview, as: :theme, url: spree.admin_theme_path(@theme_preview), method: :put, data: { 'page-builder-target': 'fontForm' } do |f| %>
-  <ul class="nav nav-pills nav-fill mb-3 mx-3 mt-3 px-0" id="pills-tab" role="tablist">
+  <ul class="nav nav-pills nav-fill m-3" id="pills-tab" role="tablist">
     <li class="nav-item" role="presentation">
       <button class="btn nav-link w-100 active" id="pills-standard" data-toggle="pill" data-target="#pills-standard-tab" type="button" role="tab" aria-controls="pills-standard" aria-selected="true">
         Standard
