--- a/admin/app/views/spree/admin/page_links/edit.html.erb
+++ b/admin/app/views/spree/admin/page_links/edit.html.erb
@@ -1,7 +1,7 @@
 <%= turbo_frame_tag :page_sidebar do %>
-  <h6 class="p-2 bg-light border-bottom sticky-top d-flex align-items-center mb-3">
-    <%= link_to collection_url, data: { action: 'click->page-builder#clearActiveOverlays' }, class: 'btn hover-gray mr-3 text-center back d-flex align-items-center shadow-none px-2' do %>
-      <%= icon 'chevron-left.svg', class: 'mr-0' %>
+  <h6 class="sidebar-header">
+    <%= link_to collection_url, data: { action: 'click->page-builder#clearActiveOverlays' }, class: 'btn hover-gray px-2' do %>
+      <%= icon 'chevron-left', class: 'mr-0' %>
     <% end %>
     <%= @page_link.label %>
   </h6>
