--- a/admin/app/views/spree/admin/page_sections/_form_tab_buttons.html.erb
+++ b/admin/app/views/spree/admin/page_sections/_form_tab_buttons.html.erb
@@ -1,4 +1,4 @@
-<div class="position-fixed border-top px-3 py-2 d-flex bg-light bottom-bar" style="bottom: 0px; left: 0px; width: 344px; z-index: 9999">
+<div class="sidebar-footer">
   <div class="d-flex align-items-center justify-content-end w-100">
     <% if tab == :design %>
       <%= link_to_with_icon "restore", Spree.t(:restore_defaults), spree.restore_design_settings_to_defaults_admin_page_section_path(@page_section), {data: {turbo_confirm: Spree.t(:are_you_sure), turbo_method: :patch }, class: 'btn btn-light'} %>
