--- a/admin/app/views/spree/admin/page_sections/edit.html.erb
+++ b/admin/app/views/spree/admin/page_sections/edit.html.erb
@@ -1,8 +1,8 @@
 <%= turbo_frame_tag :page_sidebar do %>
   <% tab_selected ||= :content %>
-  <h6 class="p-2 bg-light border-bottom sticky-top d-flex align-items-center mb-3">
-    <%= link_to collection_url, data: { action: 'click->page-builder#clearActiveOverlays' }, class: 'btn hover-gray mr-3 text-center back d-flex align-items-center shadow-none px-2' do %>
-      <%= icon 'chevron-left.svg', class: 'mr-0 back' %>
+  <h6 class="sidebar-header">
+    <%= link_to collection_url, data: { action: 'click->page-builder#clearActiveOverlays' }, class: 'btn hover-gray px-2' do %>
+      <%= icon 'chevron-left', class: 'mr-0 back' %>
     <% end %>
     <%= @page_section.display_name %>
   </h6>
@@ -10,7 +10,7 @@
     <%= form_for @page_section, url: spree.admin_page_section_path(@page_section), data: { controller: 'auto-submit' }, as: :page_section do |f| %>
       <div data-controller="bootstrap-tabs">
         <%= hidden_field_tag :tab_selected, tab_selected, data: { bootstrap_tabs_target: "input" } %>
-        <ul class="nav nav-pills nav-fill mb-3 px-0" id="pills-tab" role="tablist">
+        <ul class="nav nav-pills nav-fill mb-3" id="pills-tab" role="tablist">
           <li class="nav-item" role="presentation">
             <button class="btn nav-link w-100 <%= tab_selected == :content ? 'active' : '' %>" id="pills-home-tab" data-toggle="pill" data-target="#pills-home" type="button" role="tab" aria-controls="pills-home" aria-selected="<%= tab_selected == :content %>" data-action="bootstrap-tabs#change" data-bootstrap-tabs-tab-param="content">Content</button>
           </li>
