--- a/admin/app/views/spree/admin/page_sections/new.html.erb
+++ b/admin/app/views/spree/admin/page_sections/new.html.erb
@@ -1,7 +1,7 @@
 <%= turbo_frame_tag :page_sidebar do %>
-  <h6 class="p-2 bg-light border-bottom sticky-top d-flex align-items-center mb-1">
-    <%= link_to collection_url, data: { action: 'click->page-builder#clearActiveOverlays' }, class: 'btn hover-gray mr-3 text-center back d-flex align-items-center shadow-none px-2' do %>
-      <%= icon 'chevron-left.svg', class: 'mr-0 back' %>
+  <h6 class="sidebar-header">
+    <%= link_to collection_url, data: { action: 'click->page-builder#clearActiveOverlays' }, class: 'btn hover-gray px-2' do %>
+      <%= icon 'chevron-left', class: 'mr-0 back' %>
     <% end %>
     <%= Spree.t(:add_section) %>
   </h6>
@@ -13,7 +13,7 @@
       <% cache spree_base_cache_scope.call('new-section-list'), expires_in: 1.hour do %>
         <ul class="list-group list-group-flush m-2 mx-3">
           <% @theme.available_page_sections.each do |section_class| %>
-            <li class="list-group-item p-2 list-group-item-action cursor-pointer d-flex align-items-center hover-gray"
+            <li class="list-group-item p-2 list-group-item-action cursor-pointer d-flex align-items-center hover-action text-primary"
               data-action="click->section-form#addSection"
               data-section-form-type-param="<%= section_class %>"
             >
