--- a/admin/app/views/spree/admin/storefront/edit.html.erb
+++ b/admin/app/views/spree/admin/storefront/edit.html.erb
@@ -96,7 +96,7 @@
             <%= Spree.t(:images) %>
           </h5>
         </div>
-        <div class="card-body pb-0">
+        <div class="card-body">
           <div class="form-group">
             <%= f.label :favicon_image do %>
               Favicon image
