--- a/admin/app/views/spree/admin/themes/edit.html.erb
+++ b/admin/app/views/spree/admin/themes/edit.html.erb
@@ -1,10 +1,10 @@
-<div class="d-none d-md-block col bg-transparent">
-  <div id="liveViewCont" class="desktopLiveView" data-page-builder-target="previewContainer">
+<div class="d-none d-md-block">
+  <div class="desktopLiveView" data-page-builder-target="previewContainer">
     <div class="embed-responsive embed-responsive-4by3 bg-transparent">
       <iframe class="embed-responsive-item border border-gray bg-transparent rounded"
               data-page-builder-target="iframe"
               data-action="load->page-builder#initializeVisualEditor"
-              id="pageLivePreview"
+              id="page-builder-preview"
               sandbox="allow-same-origin allow-forms allow-popups allow-scripts allow-modals">
       </iframe>
     </div>
