--- a/admin/app/views/spree/admin/products/_bulk_operations.html.erb
+++ b/admin/app/views/spree/admin/products/_bulk_operations.html.erb
@@ -13,7 +13,7 @@
           data-action="click->bulk-operation#setBulkAction"
           data-url="<%= spree.bulk_status_update_admin_products_path(status: :active) %>"
         >
-          <%= icon("check") %>
+          <%= icon("circle-check") %>
           <%= Spree.t("admin.bulk_ops.products.title.set_status", status: :active) %>
         </a>
       <% end %>
@@ -24,6 +24,7 @@
         data-action="click->bulk-operation#setBulkAction"
         data-url="<%= spree.bulk_status_update_admin_products_path(status: :draft) %>"
       >
+        <%= icon("circle-dotted") %>
         <%= Spree.t("admin.bulk_ops.products.title.set_status", status: :draft) %>
       </a>
     </div>
@@ -52,6 +53,7 @@
           data-action="click->bulk-operation#setBulkAction"
           data-url="<%= spree.bulk_status_update_admin_products_path(status: :archived) %>"
         >
+          <%= icon("archive") %>
           <%= Spree.t("admin.bulk_ops.products.title.set_status", status: :archived) %>
         </a>
         <% if can?(:manage, Spree::Classification) %>
@@ -63,6 +65,7 @@
             data-action="click->bulk-operation#setBulkAction"
             data-url="<%= spree.bulk_add_to_taxons_admin_products_path %>"
           >
+            <%= icon("category-plus") %>
             <%= Spree.t("admin.bulk_ops.products.title.add_to_taxons") %>
           </a>
           <a
@@ -72,6 +75,7 @@
             data-action="click->bulk-operation#setBulkAction"
             data-url="<%= spree.bulk_remove_from_taxons_admin_products_path %>"
           >
+            <%= icon("category-minus") %>
             <%= Spree.t("admin.bulk_ops.products.title.remove_from_taxons") %>
           </a>
         <% end %>
@@ -85,6 +89,7 @@
             data-action="click->bulk-operation#setBulkAction"
             data-url="<%= spree.bulk_add_tags_admin_products_path %>"
           >
+            <%= icon("tag-plus") %>
             <%= Spree.t("admin.bulk_ops.products.title.add_tags") %>
           </a>
           <a
@@ -94,6 +99,7 @@
             data-action="click->bulk-operation#setBulkAction"
             data-url="<%= spree.bulk_remove_tags_admin_products_path %>"
           >
+            <%= icon("tag-minus") %>
             <%= Spree.t("admin.bulk_ops.products.title.remove_tags") %>
           </a>
         <% end %>
