--- a/admin/app/views/spree/admin/shared/_head.html.erb
+++ b/admin/app/views/spree/admin/shared/_head.html.erb
@@ -35,7 +35,7 @@
 <%= tag.meta name: "direct-upload-url", content: main_app.rails_direct_uploads_path %>
 
 <%= tinymce_assets %>
-<link rel="stylesheet" type="text/css" href="https://unpkg.com/trix@2.1.12/dist/trix.css">
+<%= stylesheet_link_tag 'spree/admin/trix', media: :all, data: { turbo_track: "reload" } %>
 
 <%= javascript_importmap_tags 'application-spree-admin', importmap: Rails.application.config.spree_admin.importmap %>
 
