--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -186,3 +186,5 @@ $code-color: $gray-600 !default;
 
 $list-group-bg: transparent !default;
 $list-group-item-padding-x:         1rem !default;
+
+$sidebar-width: 220px !default;
